[gd_scene load_steps=16 format=3 uid="uid://dytk736oxi1yj"]

[ext_resource type="Script" uid="uid://b2recqti6a326" path="res://src/ui/components/map_satellite/search_and_filters.gd" id="1_2len1"]
[ext_resource type="Script" uid="uid://cqwijn2jpiuqj" path="res://src/ui/components/utils/orientation_container.gd" id="2_q77y0"]
[ext_resource type="PackedScene" uid="uid://diojwgryptiuw" path="res://src/ui/components/map_satellite/map_searchbar.tscn" id="3_xl8us"]
[ext_resource type="Script" uid="uid://rsrj8osixsoo" path="res://src/ui/components/utils/hide_orientation.gd" id="4_csu1b"]
[ext_resource type="FontFile" uid="uid://b1jo174eyscej" path="res://assets/themes/fonts/inter/inter_600.ttf" id="5_518ky"]
[ext_resource type="Texture2D" uid="uid://cg0awu10wijew" path="res://assets/ui/place_categories/provisory-archipelagos.svg" id="6_mjn3i"]
[ext_resource type="Texture2D" uid="uid://tf0rlaicf452" path="res://assets/ui/map/empty-search.svg" id="7_4gbog"]
[ext_resource type="FontFile" uid="uid://0qlati8b2q8n" path="res://assets/themes/fonts/inter/inter_400.ttf" id="8_fepdh"]
[ext_resource type="Script" uid="uid://bhwm0bl5qoiph" path="res://src/ui/components/utils/safe_margin_container.gd" id="9_q77y0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c8imc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gvcs"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.779388, 0.367146, 0, 1)
corner_radius_top_left = 19
corner_radius_top_right = 19
corner_radius_bottom_right = 19
corner_radius_bottom_left = 19

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sr2e4"]
bg_color = Color(0.894118, 0.894118, 0.894118, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24

[sub_resource type="LabelSettings" id="LabelSettings_iemrq"]
font = ExtResource("5_518ky")
font_size = 24
font_color = Color(0.513233, 0.513233, 0.513233, 1)

[sub_resource type="LabelSettings" id="LabelSettings_77036"]
font = ExtResource("8_fepdh")
font_color = Color(0.513726, 0.513726, 0.513726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrqoo"]
bg_color = Color(0.894118, 0.894118, 0.894118, 1)
corner_radius_top_right = 24
corner_radius_bottom_right = 24

[node name="SearchAndFilters" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2len1")

[node name="PlacesSearchbar" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 125.0
grow_horizontal = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
mouse_filter = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="OrientationContainer" type="BoxContainer" parent="PlacesSearchbar"]
layout_mode = 2
theme_override_constants/separation = 15
script = ExtResource("2_q77y0")

[node name="HBoxContainer2" type="HBoxContainer" parent="PlacesSearchbar/OrientationContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="PlacesSearchbar/OrientationContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Searchbar" parent="PlacesSearchbar/OrientationContainer/HBoxContainer2" instance=ExtResource("3_xl8us")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Control" type="Control" parent="PlacesSearchbar/OrientationContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PlacesSearchbar/OrientationContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="PlacesSearchbar/OrientationContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
script = ExtResource("4_csu1b")

[node name="ArchipelagoButton" type="Button" parent="PlacesSearchbar/OrientationContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("5_518ky")
theme_override_styles/focus = SubResource("StyleBoxEmpty_c8imc")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_c8imc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_c8imc")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_c8imc")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_1gvcs")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_c8imc")
theme_override_styles/hover = SubResource("StyleBoxFlat_1gvcs")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_1gvcs")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1gvcs")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_c8imc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_c8imc")
toggle_mode = true
icon = ExtResource("6_mjn3i")
icon_alignment = 1
expand_icon = true

[node name="FilterScrollContainer" type="ScrollContainer" parent="PlacesSearchbar/OrientationContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="PlacesSearchbar/OrientationContainer/HBoxContainer/FilterScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer_Filters" type="HBoxContainer" parent="PlacesSearchbar/OrientationContainer/HBoxContainer/FilterScrollContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 11

[node name="SearchResultsContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PortraitPanelContainer" type="PanelContainer" parent="SearchResultsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(275, 290)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -290.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_sr2e4")

[node name="PortraitContainer" type="MarginContainer" parent="SearchResultsContainer/PortraitPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="SearchResults" type="Control" parent="SearchResultsContainer/PortraitPanelContainer/PortraitContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CardsScroll" type="ScrollContainer" parent="SearchResultsContainer/PortraitPanelContainer/PortraitContainer/SearchResults"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="Cards" type="BoxContainer" parent="SearchResultsContainer/PortraitPanelContainer/PortraitContainer/SearchResults/CardsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_q77y0")
invert = true

[node name="NoResults" type="VBoxContainer" parent="SearchResultsContainer/PortraitPanelContainer/PortraitContainer/SearchResults"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="TextureRect" type="TextureRect" parent="SearchResultsContainer/PortraitPanelContainer/PortraitContainer/SearchResults/NoResults"]
modulate = Color(1, 1, 1, 0.419608)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_4gbog")
stretch_mode = 3

[node name="Label" type="Label" parent="SearchResultsContainer/PortraitPanelContainer/PortraitContainer/SearchResults/NoResults"]
layout_mode = 2
text = "No results found"
label_settings = SubResource("LabelSettings_iemrq")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="SearchResultsContainer/PortraitPanelContainer/PortraitContainer/SearchResults/NoResults"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Make sure your search is spelled correctly."
label_settings = SubResource("LabelSettings_77036")
horizontal_alignment = 1
autowrap_mode = 2

[node name="LandscapePanelContainer" type="PanelContainer" parent="SearchResultsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(275, 290)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.156
anchor_bottom = 1.0
offset_top = -0.32
offset_right = 275.0
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_vrqoo")

[node name="LandscapeContainer" type="MarginContainer" parent="SearchResultsContainer/LandscapePanelContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30
script = ExtResource("9_q77y0")
default_margin = 20
use_right = false
use_top = false
use_bottom = false
metadata/_custom_type_script = "uid://bhwm0bl5qoiph"

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="toggled" from="PlacesSearchbar/OrientationContainer/HBoxContainer/ArchipelagoButton" to="." method="_on_archipelago_button_toggled"]
